--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -3,6 +3,13 @@
   *
   */
 
+.page-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  height: 100lvh;
+}
+
 .site-nav {
   align-items: center;
   display: flex;
@@ -34,7 +41,7 @@ footer {
   gap: 50px;
   grid-template-columns: repeat(auto-fit, minmax(60ch, 1fr));
   list-style-type: none;
-  padding: 75px;
+  padding-inline-start: 0;
 }
 
 .project-card {
@@ -49,4 +56,8 @@ footer {
 
 .project-picture > img {
   max-width: 100%;
+}
+
+main {
+  padding: 0 75px;
 }
