--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -3,6 +3,12 @@
   *
   */
 
+@import url("https://fonts.googleapis.com/css2?family=Assistant&display=swap");
+
+* {
+  font-family: "Assistant", sans-serif;
+}
+
 :root {
   --content-width: 50ch;
   --form-spacing: 10px;
