--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -3,6 +3,12 @@
   *
   */
 
+@import url("https://fonts.googleapis.com/css2?family=Assistant&display=swap");
+
+* {
+  font-family: "Assistant", sans-serif;
+}
+
 :root {
   --testimonial-max-width: 40ch;
 }
