--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -32,6 +32,22 @@
   padding-inline-start: 0;
 }
 
+.site-nav > li > a {
+  text-decoration: underline transparent;
+}
+
+.site-nav > li > a:not(.logo-link):hover {
+  text-decoration-color: black;
+}
+
+.logo {
+  transition: transform 400ms ease-in-out;
+}
+
+.logo:hover {
+  transform: rotate(180deg);
+}
+
 .socials {
   display: flex;
   list-style-type: none;
